# turing-capstone-escape-room-agent

./: .gitattributes  .gitignore  ARCHITECTURE.md  DISCLAIMER.md  LICENSE  LICENSE-ASSETS.md  README.md  REFLECTIONS.md
agent/backend/: config.py  disclaimer_acceptance.py  event_bus.py  game_constants.py  main.py  pyproject.toml
agent/backend/agent/: callbacks.py  explorer.py  game_client.py  game_secrets.py  human_interaction.py  interview.py  interview_context.py  memory_agent.py  memory_session.py  memory_sources.py  prompts.py  run_commands.py  run_max_steps_infer.py  run_memory.py  run_messages.py  run_nudges.py  run_registry.py  run_state_diff.py  run_stream.py  runner.py  runner_cli.py  tools.py
agent/backend/api/: disclaimer_routes.py  run_routes.py  ws_handler.py
agent/backend/db/: database.py  datetime_utils.py  models.py
agent/backend/memory/: chroma_store.py
agent/backend/middleware/: moderation.py
agent/backend/scripts/: backfill_max_steps.py  cleanup_stale_run_errors.py  cleanup_test_runs.py
agent/backend/shared/: README.md
agent/backend/tests/: conftest.py  test_agent_api.py  test_ask_human.py  test_backfill_max_steps.py  test_chroma_store.py  test_event_bus.py  test_explorer_prompts.py  test_game_client_contract.py  test_game_client_validation.py  test_game_constants.py  test_human_interaction_steps.py  test_interview_context.py  test_interview_grounding.py  test_interview_memory.py  test_interview_transcript.py  test_memory_context.py  test_memory_session_api.py  test_memory_sources.py  test_runner.py  (+9 more)
game/backend/: main.py  pyproject.toml  solution_chain.py  test_solution.py
(+132 files in other folders)
