[project]
name = "capstone-agent"
version = "0.1.0"
description = "ReAct explorer agent + live dashboard for The Haunted Manor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "db", "memory", "middleware"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring running capstone-game API on port 8000",
]
